extended lab 5 to have role-based access control