@@ -1,5 +1,6 @@
 package com.example.jwt_auth_demo.service;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -7,7 +8,9 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -20,16 +23,27 @@ public class UserDetailsServiceImpl implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        // For simplicity, we're just using a hardcoded user
-        // In a real application, you would look up the user from a database
-        if ("user".equals(username)) {
-            return new User(
-                    "user",
-                    passwordEncoder.encode("password"),
-                    Collections.emptyList()
-            );
-        } else {
-            throw new UsernameNotFoundException("User not found: " + username);
+        // For a production application, this would query a database instead of using hardcoded users
+        switch (username) {
+            case "admin":
+                return new User(
+                        "admin",
+                        passwordEncoder.encode("admin123"),
+                        List.of(
+                                new SimpleGrantedAuthority("ROLE_ADMIN"),
+                                new SimpleGrantedAuthority("ROLE_USER")
+                        )
+                );
+            case "user":
+                return new User(
+                        "user",
+                        passwordEncoder.encode("password"),
+                        Collections.singletonList(
+                                new SimpleGrantedAuthority("ROLE_USER")
+                        )
+                );
+            default:
+                throw new UsernameNotFoundException("User not found: " + username);
         }
     }
 }
